# script-status

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202605040001_create_sessions.py  202605050001_add_session_status.py
backend/app/: config.py  main.py  models.py  schemas.py  services.py
backend/script_status_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_sessions.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  LogoMark.tsx  api.ts  format.test.ts  format.ts  styles.css  types.ts
infra/: README.md  deployment-guide.md  postgres-backups.md  redeploy.sh
infra/env/: backend.env.example  postgres.env.example
infra/reverse-proxy/: Caddyfile  Caddyfile.example  nginx.conf.example
