[project]
name = "script-status-backend"
version = "0.1.0"
description = "FastAPI service for RuneScape bot script session health"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "fastapi>=0.112.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.5",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"
